--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@
 
 body {
   font-family: Poppins;
+  padding: 1rem;
 }
 
 ul {
@@ -27,6 +28,39 @@ img {
   max-width: 100%;
 }
 
-h1 a {
-  color: red;
+h1 {
+  color: #326dee;
+  margin-bottom: 0.75rem;
+}
+
+a {
+  color: #1ac886;
+}
+
+button {
+  color: white;
+  border: 0;
+  background: #326dee;
+  border-radius: 5px;
+  padding: 0.75rem;
+}
+
+.error {
+  color: #d32752;
+  border-color: #d32752;
+  border-style: solid;
+  margin: 0.75rem;
+  padding: 0.75rem;
+  border-radius: 5px;
+  border-width: 1px;
+}
+
+.notification {
+  color: #1ac886;
+  border-color: #1ac886;
+  border-style: solid;
+  margin: 0.75rem;
+  padding: 0.75rem;
+  border-radius: 5px;
+  border-width: 1px;
 }
