--- a/rqcss/index.scss
+++ b/rqcss/index.scss
@@ -1,13 +1,21 @@
+@import 'reset';
 // variables & functions
+@import 'functions';
 @import 'variables';
 
 // base & layout
 @import 'base';
+@import 'breakpoints';
+@import 'grid';
 
 // colors
-
+@import "colors";
 
 // components (button, card, navbar etc)
-
+@import 'components/card';
+@import 'components/button';
+@import 'components/navbar';
+@import 'components/badge';
 
 // utilities (margin, padding, opacity, etc)
+@import 'utilities';
