fixed GitHub Pages css root

--- a/rqcss/index.scss
+++ b/rqcss/index.scss
@@ -1,4 +1,8 @@
-@import 'reset';
+/* RQCSS - A Lightweight CSS Library by RANGE QUEST */
+/* https://range.quest */
+/* ------------------- */
+
+
 // variables & functions
 @import 'functions';
 @import 'variables';
